# browser-sniffer

./: AGENTS.md  popup.html  popup.js  pyproject.toml
.qwen/: AGENTS.md
background/: buffer.js  main.js  network.js  redact.js  runtime.js  settings.js  state.js  storage.js
brain/: derive.py  ingest.py  main.py  models.py  output.py  service.py  utils.py
docs/: changelog.md  index.md  project_structure.md
docs/back/: index.md
docs/back/modules/derive/: index.md
docs/back/modules/ingest/: index.md
docs/back/modules/main/: index.md
docs/back/modules/models/: index.md
docs/back/modules/output/: index.md
docs/back/modules/service/: index.md
docs/back/modules/utils/: index.md
docs/front/: index.md
docs/front/modules/background/: index.md
docs/front/modules/devtools/: index.md
docs/front/modules/popup/: index.md
docs/modules/background/: index.md
docs/modules/devtools/: index.md
docs/modules/popup/: index.md
extension/: background.js  devtools.html  devtools.js  manifest.json  popup.html  popup.js
extension/background/: network.js  state.js  storage.js
tests/: test_brain.py
