[project]
name = "site-network-sniffer"
version = "0.1.0"
description = ""
authors = [
    {name = "Moti Elmakyes",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich (>=14.1.0,<15.0.0)",
    "fastapi (>=0.112.0,<1.0.0)",
    "uvicorn (>=0.30.0,<1.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
